correcting css version mobile in navbar , evaluation and accueil pages

--- a/src/app/features/Home/Accueil/Accueil.component.css
+++ b/src/app/features/Home/Accueil/Accueil.component.css
@@ -556,6 +556,9 @@ a {
     h1 {
         font-size: 20px;
     }
+    h2{
+      font-size: 27px;
+    }
   
     /* Navbar */
     .toggle-btn i {
