--- a/src/app/shared/navbar-home/navbar-home.component.css
+++ b/src/app/shared/navbar-home/navbar-home.component.css
@@ -158,7 +158,7 @@ nav {
   top: 64px;
   left: 0;
   width: 100%;
-  padding-top: 20px;
+  padding-top: 50px;
   list-style: none;
   display: flex;
   align-items: center;
